Fix crash when undoing addition of a text layer

BUG:457125